--- a/ReactCode/package.json
+++ b/ReactCode/package.json
@@ -10,15 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^9.1.2",
     "@sanity/client": "^6.28.4",
     "@sanity/image-url": "^1.1.0",
     "@tailwindcss/vite": "^4.1.3",
-    "framer-motion": "^12.6.3",
+    "framer-motion": "^12.9.2",
+    "popmotion": "^11.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "tailwindcss": "^4.1.3",
+    "three": "^0.176.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
