--- a/ReactCode/package.json
+++ b/ReactCode/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "@sanity/client": "^6.28.4",
     "@sanity/image-url": "^1.1.0",
