--- a/ReactCode/package.json
+++ b/ReactCode/package.json
@@ -16,6 +16,7 @@
     "@sanity/image-url": "^1.1.0",
     "@tailwindcss/vite": "^4.1.3",
     "framer-motion": "^12.9.2",
+    "lucide-react": "^0.508.0",
     "popmotion": "^11.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
